Update azure-manual-promote-rc.yml for Azure Pipelines

--- a/azure-manual-promote-rc.yml
+++ b/azure-manual-promote-rc.yml
@@ -81,10 +81,10 @@ steps:
       [xml]$Xml = Get-Content .\sandboxlist.xml
       $SnippetNamespace = @{ns = "https://analysiscenter.veracode.com/schema/4.0/sandboxlist"}
       # ${{parameters.sandboxName}}
-      Select-Xml -Xml $Xml -Namespace $SnippetNamespace -XPath "//ns:sandbox[@sandbox_name='Release Candidate']" | ForEach-Object {$_.Node.sandbox_id}
+      $SandboxId = Select-Xml -Xml $Xml -Namespace $SnippetNamespace -XPath "//ns:sandbox[@sandbox_name='Release Candidate']" | ForEach-Object {$_.Node.sandbox_id}
 
       # Promote Scan
-      java -jar $(Build.ArtifactStagingDirectory)/extract/VeracodeJavaAPI.jar -vid ${{parameters.vid}} -vkey ${{parameters.vkey}} -action getbuildlist -appid $veracodeappid -sandboxid $veracodesandboxid | tee getbuildlist.xml
+      java -jar $(Build.ArtifactStagingDirectory)/extract/VeracodeJavaAPI.jar -vid ${{parameters.vid}} -vkey ${{parameters.vkey}} -action getbuildlist -appid $ApplicationId -sandboxid $SandboxId | tee getbuildlist.xml
      
      
       # echo $veracodebuildid
