Update azure-manual-promote-rc.yml for Azure Pipelines

--- a/azure-manual-promote-rc.yml
+++ b/azure-manual-promote-rc.yml
@@ -67,7 +67,7 @@ steps:
    
   - pwsh: |
       java -jar $(Build.ArtifactStagingDirectory)/extract/VeracodeJavaAPI.jar -vid ${{parameters.vid}} -vkey ${{parameters.vkey}} -action getapplist | tee applicationlist.xml
-      
+      ls -la
       $appName = "verademo-net-github-actions"
       [xml]$Xml = Get-Content .\applicationlist.xml
       $SnippetNamespace = @{ns = "https://analysiscenter.veracode.com/schema/2.0/applist"}
@@ -77,14 +77,15 @@ steps:
 
       # Get Application Sanbox List
       java -jar $(Build.ArtifactStagingDirectory)/extract/VeracodeJavaAPI.jar -vid ${{parameters.vid}} -vkey ${{parameters.vkey}} -action getsandboxlist -appid $ApplicationId | tee sandboxlist.xml
-    
+      ls -la
       [xml]$Xml = Get-Content .\sandboxlist.xml
       $SnippetNamespace = @{ns = "https://analysiscenter.veracode.com/schema/4.0/sandboxlist"}
       # ${{parameters.sandboxName}}
       $SandboxId = Select-Xml -Xml $Xml -Namespace $SnippetNamespace -XPath "//ns:sandbox[@sandbox_name='${{parameters.sandboxName}}']" | ForEach-Object {$_.Node.sandbox_id}
 
       # Promote Scan
-      java -jar $(Build.ArtifactStagingDirectory)/extract/VeracodeJavaAPI.jar -vid ${{parameters.vid}} -vkey ${{parameters.vkey}} -action GetBuildList -appid $ApplicationId -sandboxid $SandboxId | tee Buildlist.xml
+      java -jar $(Build.ArtifactStagingDirectory)/extract/VeracodeJavaAPI.jar -vid ${{parameters.vid}} -vkey ${{parameters.vkey}} -action GetBuildList -appid $ApplicationId -sandboxid $SandboxId | tee buildlist.xml
+      ls -la
       [xml]$Xml = Get-Content .\buildlist.xml
       $SnippetNamespace = @{ns = "https://analysiscenter.veracode.com/schema/2.0/buildlist"}
       $Build = Select-Xml -Xml $Xml -Namespace $SnippetNamespace -XPath "//ns:build[last()]"
@@ -93,7 +94,8 @@ steps:
       Write-Host $BuildId
       Write-Host $Build.Node.version
 
-      java -jar $(Build.ArtifactStagingDirectory)/extract/VeracodeJavaAPI.jar -vid ${{parameters.vid}} -vkey ${{parameters.vkey}} -action GetBuildInfo -appid $ApplicationId -sandboxid $SandboxId -buildid $BuildId | tee BuildInfo.xml
+      java -jar $(Build.ArtifactStagingDirectory)/extract/VeracodeJavaAPI.jar -vid ${{parameters.vid}} -vkey ${{parameters.vkey}} -action GetBuildInfo -appid $ApplicationId -sandboxid $SandboxId -buildid $BuildId | tee buildinfo.xml
+      ls -la
       [xml]$Xml = Get-Content .\buildinfo.xml
       $SnippetNamespace = @{ns = "https://analysiscenter.veracode.com/schema/4.0/buildinfo"}
       $element = Select-Xml -Xml $Xml -Namespace $SnippetNamespace -XPath "//ns:build"
