--- a/azure-manual-promote-rc.yml
+++ b/azure-manual-promote-rc.yml
@@ -106,7 +106,7 @@ steps:
      
       # echo $veracodebuildid
       
-      echo "##vso[task.setvariable variable=resultsReady]$element.Node.results_ready"
+      echo "##vso[task.setvariable variable=resultsReady]$results_ready"
 
       #java -jar $(Build.ArtifactStagingDirectory)/extract/VeracodeJavaAPI.jar -vid ${{parameters.vid}} -vkey ${{parameters.vkey}} -action passfail -appname $"${{parameters.appName}}" -sandboxid $veracodesandboxid
      
