--- a/azure-manual-promote-rc.yml
+++ b/azure-manual-promote-rc.yml
@@ -25,6 +25,7 @@ variables:
   - name: ApplicationId
   - name: SandboxId
   - name: AnalysisId
+  - name: AnalysisName
 
 steps:
   - script: java --version
@@ -53,22 +54,18 @@ steps:
     displayName: Veracode Wrapper Version
     enabled: false
       
-  - script: |
-      java -jar $(Build.ArtifactStagingDirectory)/extract/VeracodeJavaAPI.jar -vid ${{parameters.vid}} -vkey ${{parameters.vkey}} -action getapplist 
-    displayName: Display the Application List
-    enabled: false
-   
   - pwsh: |
       java -jar $(Build.ArtifactStagingDirectory)/extract/VeracodeJavaAPI.jar -vid ${{parameters.vid}} -vkey ${{parameters.vkey}} -action getapplist | tee applicationlist.xml
       [xml]$Xml = Get-Content .\applicationlist.xml
       $SnippetNamespace = @{ns = "https://analysiscenter.veracode.com/schema/2.0/applist"}
       $appid = Select-Xml -Xml $Xml -Namespace $SnippetNamespace -XPath "//ns:app[@app_name='${{parameters.appName}}']" | ForEach-Object {$_.Node.app_id}
 
-      echo "##vso[task.setvariable variable=ApplicationId]$appid"
+      ##vso[task.setvariable variable=ApplicationId]$appid
+      echo "Application ID: $(ApplicationId)"
     displayName: Retrieving Application ID
     
   - pwsh: |
-      echo "Application ID: $(ApplicationId)"
+      Write-Host "Application ID: $(ApplicationId)"
       java -jar $(Build.ArtifactStagingDirectory)/extract/VeracodeJavaAPI.jar -vid ${{parameters.vid}} -vkey ${{parameters.vkey}} -action getsandboxlist -appid $(ApplicationId) | tee sandboxlist.xml
 
       [xml]$Xml = Get-Content .\sandboxlist.xml
@@ -76,25 +73,27 @@ steps:
       # ${{parameters.sandboxName}}
       $sandbox_id = Select-Xml -Xml $Xml -Namespace $SnippetNamespace -XPath "//ns:sandbox[@sandbox_name='${{parameters.sandboxName}}']" | ForEach-Object {$_.Node.sandbox_id}
   
-      echo "##vso[task.setvariable variable=SandboxId]$sandbox_id"
+      ##vso[task.setvariable variable=SandboxId]$sandbox_id
+      Write-Host "Sandbox ID: $(SandboxId)"
     displayName: Retrieving Sandbox ID
   
   - pwsh: |
-      echo "Sandbox ID: $(SandboxId)"
+      Write-Host "Sandbox ID: $(SandboxId)"
       java -jar $(Build.ArtifactStagingDirectory)/extract/VeracodeJavaAPI.jar -vid ${{parameters.vid}} -vkey ${{parameters.vkey}} -action GetBuildList -appid $(ApplicationId) -sandboxid $(SandboxId) | tee buildlist.xml
    
       [xml]$Xml = Get-Content .\buildlist.xml
       $SnippetNamespace = @{ns = "https://analysiscenter.veracode.com/schema/2.0/buildlist"}
       $Build = Select-Xml -Xml $Xml -Namespace $SnippetNamespace -XPath "//ns:build[last()]"
-
-      $BuildId =  $Build.Node.build_id
-      Write-Host $BuildId
-      Write-Host $Build.Node.version
-      echo "##vso[task.setvariable variable=AnalysisId]$BuildId"
+      $BuildId = $Build.Node.build_id
+      $Version = $Build.Node.version
+      
+      ##vso[task.setvariable variable=AnalysisName]$Version
+      ##vso[task.setvariable variable=AnalysisId]$BuildId
+      Write-Hoste "Analysis ID: $(AnalysisId)"
     displayName: Retrieving Build List
 
   - pwsh: |
-      echo "Analysis ID: $(AnalysisId)"
+      Write-Hoste "Analysis ID: $(AnalysisId)"
       java -jar $(Build.ArtifactStagingDirectory)/extract/VeracodeJavaAPI.jar -vid ${{parameters.vid}} -vkey ${{parameters.vkey}} -action GetBuildInfo -appid $(ApplicationId) -sandboxid $(SandboxId) -buildid $(AnalysisId) | tee buildinfo.xml
    
       [xml]$Xml = Get-Content .\buildinfo.xml
@@ -102,20 +101,14 @@ steps:
       $element = Select-Xml -Xml $Xml -Namespace $SnippetNamespace -XPath "//ns:build"
       Write-Host $element.Node.results_ready
       $results_ready = $element.Node.results_ready
-      
-      #java -jar $(Build.ArtifactStagingDirectory)/extract/VeracodeJavaAPI.jar -vid ${{parameters.vid}} -vkey ${{parameters.vkey}} -action passfail -appname $"${{parameters.appName}}" -sandboxid $veracodesandboxid
-     
-      # echo $veracodebuildid
-      
-      echo "##vso[task.setvariable variable=resultsReady]$results_ready"
-
-      #java -jar $(Build.ArtifactStagingDirectory)/extract/VeracodeJavaAPI.jar -vid ${{parameters.vid}} -vkey ${{parameters.vkey}} -action passfail -appname $"${{parameters.appName}}" -sandboxid $veracodesandboxid
-     
-      #java -jar $(Build.ArtifactStagingDirectory)/extract/VeracodeJavaAPI.jar -vid ${{parameters.vid}} -vkey ${{parameters.vkey}} -action PromoteSandbox -buildid $veracodebuildid 
+    
+      ##vso[task.setvariable variable=resultsReady]$results_ready
+      Write-Host $(resultsReady)
     displayName: Evaluating Scan
     enabled: true
 
   - pwsh: |
       Write-Host 'Hello World: $(resultsReady)'
+      #java -jar $(Build.ArtifactStagingDirectory)/extract/VeracodeJavaAPI.jar -vid ${{parameters.vid}} -vkey ${{parameters.vkey}} -action PromoteSandbox -buildid $(AnalysisId)
     condition: eq(variables['resultsReady'],'true')
     displayName: Promoting Scan
