--- a/azure-manual-promote-rc.yml
+++ b/azure-manual-promote-rc.yml
@@ -90,12 +90,12 @@ steps:
       $Build = Select-Xml -Xml $Xml -Namespace $SnippetNamespace -XPath "//ns:build[last()]"
       $BuildId = $Build.Node.build_id
       $Version = $Build.Node.version
-      echo $BuildId
+      echo "Analysis ID: $BuildId"
       echo $Version
 
       echo "##vso[task.setvariable variable=AnalysisName]$Version"
       echo "##vso[task.setvariable variable=AnalysisId]$BuildId"
-      Write-Host "Analysis ID: $(AnalysisId)"
+
     displayName: Retrieving Build List
 
   - pwsh: |
@@ -107,9 +107,9 @@ steps:
       $element = Select-Xml -Xml $Xml -Namespace $SnippetNamespace -XPath "//ns:build"
       Write-Host $element.Node.results_ready
       $results_ready = $element.Node.results_ready
-    
+      echo "Result Ready: $results_ready"
       echo "##vso[task.setvariable variable=resultsReady]$results_ready"
-      Write-Host $(resultsReady)
+      
     displayName: Evaluating Scan
     enabled: true
 
