--- a/azure-manual-platform-release-candidate-promote.yml
+++ b/azure-manual-platform-release-candidate-promote.yml
@@ -1,5 +1,8 @@
 name: Promote to Policy Level #$(SourceBranchName)_$(date:yyyyMMdd)$(rev:.r) 
 
+pool:
+  vmImage: 'windows-latest'
+
 trigger: none
 pr: none
 
