--- a/azure-manual-platform-release-candidate-promote.yml
+++ b/azure-manual-platform-release-candidate-promote.yml
@@ -10,9 +10,9 @@ resources:
       name: dmedeiros-veracode/devops-scripts-azure-devops
       endpoint: dmedeiros-veracode #Connection name of GitHub App. Can be name of a Service Connection to GitHub as well.
 
-pool:
+#pool:
   #vmImage: ubuntu-latest
-  vmImage: 'windows-latest'
+#  vmImage: 'windows-latest'
 
 variables:
 - group: 'Veracode Credentials' # Reference the library containing Veracode Credentials
